{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 15,
  "lineage": "5174018d-44dc-ecc9-2bea-8e209c0b0883",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017139c45363820c8",
            "domain": "vpc",
            "id": "eipalloc-017139c45363820c8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-164-140-128.compute-1.amazonaws.com",
            "public_ip": "54.164.140.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "demo_cluster-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo_cluster-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886119127218:internet-gateway/igw-00544ccdcf3cd9e9e",
            "id": "igw-00544ccdcf3cd9e9e",
            "owner_id": "886119127218",
            "tags": {
              "Environment": "dev",
              "Name": "demo_cluster-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo_cluster-igw"
            },
            "vpc_id": "vpc-05f70ad62b1d9b76b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017139c45363820c8",
            "association_id": "eipassoc-0747502f45365f3b0",
            "connectivity_type": "public",
            "id": "nat-0d723f620db13d432",
            "network_interface_id": "eni-0db09662a27f9a18b",
            "private_ip": "10.101.1.209",
            "public_ip": "54.164.140.128",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0952964e78b252600",
            "tags": {
              "Environment": "dev",
              "Name": "demo_cluster-ngw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo_cluster-ngw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886119127218:route-table/rtb-000f0f575a699eda3",
            "id": "rtb-000f0f575a699eda3",
            "owner_id": "886119127218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d723f620db13d432",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "demo_cluster-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo_cluster-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f70ad62b1d9b76b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ng",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886119127218:route-table/rtb-0a4f1ffa46461eab4",
            "id": "rtb-0a4f1ffa46461eab4",
            "owner_id": "886119127218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00544ccdcf3cd9e9e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "demo_cluster-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo_cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f70ad62b1d9b76b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c052e2f04f6ff6d",
            "route_table_id": "rtb-000f0f575a699eda3",
            "subnet_id": "subnet-0ef0d944bb0a612f4"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ng",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bbb875f8b165f6c",
            "route_table_id": "rtb-000f0f575a699eda3",
            "subnet_id": "subnet-0c1d2a733caf83551"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ng",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090209c9bb6210ebe",
            "route_table_id": "rtb-0a4f1ffa46461eab4",
            "subnet_id": "subnet-0c369fe73cd6eaa8d"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027761b823f48158f",
            "route_table_id": "rtb-0a4f1ffa46461eab4",
            "subnet_id": "subnet-0952964e78b252600"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886119127218:subnet/subnet-0ef0d944bb0a612f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.101.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef0d944bb0a612f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886119127218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "demo_cluster-private-subnet",
              "kubernetes.io/cluster/demo_cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo_cluster-private-subnet",
              "kubernetes.io/cluster/demo_cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05f70ad62b1d9b76b"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886119127218:subnet/subnet-0c1d2a733caf83551",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.101.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1d2a733caf83551",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886119127218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "demo_cluster-private-subnet",
              "kubernetes.io/cluster/demo_cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo_cluster-private-subnet",
              "kubernetes.io/cluster/demo_cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05f70ad62b1d9b76b"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886119127218:subnet/subnet-0c369fe73cd6eaa8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.101.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c369fe73cd6eaa8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "886119127218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "demo_cluster-public-subnet",
              "kubernetes.io/cluster/demo_cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo_cluster-public-subnet",
              "kubernetes.io/cluster/demo_cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05f70ad62b1d9b76b"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886119127218:subnet/subnet-0952964e78b252600",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.101.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0952964e78b252600",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "886119127218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "demo_cluster-public-subnet",
              "kubernetes.io/cluster/demo_cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo_cluster-public-subnet",
              "kubernetes.io/cluster/demo_cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05f70ad62b1d9b76b"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886119127218:vpc/vpc-05f70ad62b1d9b76b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.101.0.0/16",
            "default_network_acl_id": "acl-0e2ce6b2eb9bdddba",
            "default_route_table_id": "rtb-0d8e40cc7883c94c4",
            "default_security_group_id": "sg-0a1e67fa426caf827",
            "dhcp_options_id": "dopt-0a6af768f4b18c6a5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05f70ad62b1d9b76b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d8e40cc7883c94c4",
            "owner_id": "886119127218",
            "tags": {
              "Environment": "dev",
              "Name": "demo_cluster-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo_cluster-vpc"
            }
          }
        }
      ]
    }
  ]
}